WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28935
[GTK] loadFinished never emitted
https://bugs.webkit.org/show_bug.cgi?id=28935
Summary
[GTK] loadFinished never emitted
Xan Lopez
Reported
2009-09-02 23:24:19 PDT
http://monoscope.com/2009/09/the_whole_verdana_is_the_new_f.html
will go do PROVISIONAL->COMMITTED->FIRST VISUALLY NON EMPTY LAYOUT and sit there forever without emitting FINISHED.
Attachments
scheduleerror.diff
(5.17 KB, patch)
2009-09-04 06:41 PDT
,
Xan Lopez
gustavo
: review+
gustavo
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2009-09-03 07:58:21 PDT
After some investigation, this is what happens: The finished thing is dispatched, but instead of in the main frame in a subframe the page creates through JavaScript (one of those IFrame things for various hacks, I guess), so we never receive the signal in the WebView, which is what Epiphany expects. Asking on IRC this does not happen in other ports, so I guess it's some bug in our side.
Xan Lopez
Comment 2
2009-09-04 06:41:44 PDT
Created
attachment 39054
[details]
scheduleerror.diff Schedule errors at the right time.
Gustavo Noronha (kov)
Comment 3
2009-09-04 07:01:20 PDT
Comment on
attachment 39054
[details]
scheduleerror.diff r=me
Xan Lopez
Comment 4
2009-09-04 07:04:39 PDT
Landed in
r48049
, closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug