2009-09-04  Xan Lopez  <xlopez@igalia.com>

Reviewed by Gustavo Noronha.

        [GTK] loadFinished never emitted
        https://bugs.webkit.org/show_bug.cgi?id=28935

        Do not report errors right away from
        ResourceHandle::start. Instead return true and schedule an error
        to be reported in the handle later. Otherwise WebCore gets
        confused and thinks the resource never finished loading, making it
        not emit the finished status.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::startHttp):
        (WebCore::):

Canonical link: https://commits.webkit.org/39625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48049 268f45cc-cd09-0410-ab3c-d52691b4dbfc